Fix overflow

--- a/docs/_sass/_main.scss
+++ b/docs/_sass/_main.scss
@@ -58,11 +58,8 @@ pre {
 	font-family: Menlo, Consolas, monospace, sans-serif;
 	line-height: 1.5;
 	margin: .5rem;
+	overflow-x: auto;
 	padding: 1rem;
-
-	.highlight {
-		overflow: scroll;
-	}
 }
 
 pre code {
